# KiCad-Librarian

./: README
doc/: LICENSE  NOTICE
src/: CMakeLists.txt  cxffont.cpp  cxffont.h  libmngr_dlgnewfootprint.cpp  libmngr_dlgnewfootprint.h  libmngr_dlgnewsymbol.cpp  libmngr_dlgnewsymbol.h  libmngr_dlgoptions.cpp  libmngr_dlgoptions.h  libmngr_dlgremotelink.cpp  libmngr_dlgremotelink.h  libmngr_dlgreport.cpp  libmngr_dlgreport.h  libmngr_dlgtemplate.cpp  libmngr_dlgtemplate.h  libmngr_frame.cpp  libmngr_frame.h  libmngr_gui_base.cpp  libmngr_gui_base.fbp  libmngr_gui_base.h  libmngr_paths.cpp  libmngr_paths.h  libraryfunctions.cpp  libraryfunctions.h  librarymanager.cpp  librarymanager.h  librarymanager.rc  pdfreport.cpp  pdfreport.h  remotelink.cpp  remotelink.h  rpn.cpp  rpn.h  svnrev.h
src/res/: ArrowLeft.xpm  logo32.xpm  logo48.xpm  logo64.xpm
template/: CAE.mt  Chip.mt  DIP.mt  HDR1x_.mt  HDR2x_.mt  HDR2x_SMD.mt  MELF.mt  MLD.mt  MLDPOL.mt  QFN.mt  QFNX.mt  QFP.mt  QFPX.mt  SOD.mt  SON.mt  SONX.mt  SOP.mt  SOPX.mt  SOT23.mt
